2001-12-13 Alexander Rawass <alexannika@users.sourceforge.net>

	* added strings to c_alike.yacc
	* added string callbacks src/cmd/script/script_call_string.cpp
	* made Unit remember the Flightgroup & nr
	* testd_unit1.mission now prints out also the fg id
	

2001-12-12 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added file src/cmd/script/script_call_unit.cpp


2001-12-12 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added file src/cmd/script/script_call_olist.cpp
	* improved olist code
	* added variable 'startgame' to section 'interpreter' in
	  vegastrike.config
	
	
2001-12-11 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter runs now while the game goes on
	* added callback 'getGameTime'

	
2001-12-11 Alexander Rawass <alexannika@users.sourceforge.net>

	* interpreter can use c_alike module files

2001-12-10 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* imported vegastrike/src/cmd/script/c_alike
	* modified Makefile.am's and configure.in

2001-12-07 Alexander Rawass <alexannika@users.sourceforge.net>

	* digital hatswitch code can be turned off/on with
	  debug_digital_hatswitch in section joystick


2001-12-06 Alexander Rawass <alexannika@users.sourceforge.net>

	* interpreter:
	  - datatype object
	  - callback 'olist' implements list
	

2001-12-06 Alexander Rawass <alexannika@users.sourceforge.net>

	* interpreter:
	  - moved code out of mission_script.cpp:
	    - added script_variables.cpp
	    - added script_util.cpp
	    - modified cmd/script/Makefile.am


2001-12-04 Alexander Rawass <alexannika@users.sourceforge.net>

	* interpreter:
	  - import of multiple modules
	  - exec in another module
	  - saveVariables
	  - datatype object (not yet)
	* change of dir structure
	  - modified src/Makefile.am src/cmd/Makefile.am configure.in
	  - imported interpreter code at src/cmd/script
	  - imported missions to data/mission
	  - imported modules to data/modules
	* imported doc dir at vegastrike/doc
	  
